feat: Add generate_code_snippet tool
This commit introduces a new tool  that allows generating code snippets for a given request in various languages and frameworks.

- Adds  as a dependency to handle the code generation.
- Implements the  tool in .
- Updates  with installation instructions and usage examples for the new feature.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "1.13.3",
     "axios": "^1.6.0",
+    "httpsnippet": "^3.0.9",
     "uuid": "10.0.0"
   },
   "devDependencies": {
